# dotfiles

./: .flake8  .gitattributes  .gitignore  LICENSE  README.adoc  README.md  dot_bash_profile  install  install.rb  install.sh  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  README.adoc  README.md  devcontainer.json
.github/: copilot-instructions.md
adocify/: .gitignore  README.adoc  README.md  eslint.config.js  install.sh  package-lock.json  package.json  tsconfig.json
adocify/src/: index.ts
bash/: config  env
carbon.now.sh/: README.adoc  README.md  carbon-config.json
conky/: .conky-flexboxrc  .conkyrc  README.adoc  README.md  examples.md  fetch_reddit_image.py  fetch_reddit_image.sh  install.sh  sensors.sh  vim_tips_processor.sh  vnstati.sh
emptybye/: README.adoc  README.md  emptybye.py  install.sh
git/: .gitconfig  README.adoc  README.md  install.sh
gnome/: focus.sh
help/: README.adoc  README.md  bu-help.py  install.sh
imgls/: README.adoc  README.md  imgls.sh  install.sh
imgsizes/: imgsizes.py
imgtag/: README.adoc  README.md  imgtag.py  install.sh
incron/: README.adoc  cleanmeta.sh  install.sh
kitty/: dark-theme.auto.conf  kitty.conf  no-preference-theme.auto.conf  quick-access-terminal.conf
lmdumpb/: README.adoc  README.md  dump.py  install.sh
memusg/: README.md  install.sh  memusg.py  requirements.txt
memviz/: README.adoc  README.md  install.sh  memviz.py
mkfav/: README.adoc  README.md  install.sh  mkfav.sh
mkicns/: README.adoc  install.sh  mkicns.sh
npmrc/: .npmrc  README.adoc  install.sh
openai/: README.adoc  README.md  bu-openai.py  install.sh
pngcrush/: README.adoc  README.md  crush.sh  install.sh
ruby/: help.rb
sqlite/: README.adoc  README.md  dump.py  install.sh
ssh/: config
thumbgen/: bu-thumbgen.py
topydo/: README.adoc  README.md  columns  config  install.sh
wezterm/: wezterm.lua
zed/: README.adoc  README.md  install.sh  settings.json
