[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pyright]
reportUnusedExpression = false
reportMissingImports = true
reportMissingTypeStubs = false


[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "PLC", # Pylint's convention related rules
    "PLE", # Pylint's error related rules
    "PLR", # Pylint's refactoring related rules
    "PLW", # Pylint's warning related rules
]
ignore = [
    "F541", # f-string-missing-placeholders
]


[tool.ruff.format]
quote-style = "double"            # Double quotes for strings.
indent-style = "space"            # Use spaces for indentation.
skip-magic-trailing-comma = false # Ruff will automatically add trailing commas to multi-line lists and dictionaries.
line-ending = "auto"              # Automatically detect and use the line ending style of the source file.
